--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container mx-auto p-5 row">
+    <div class="mx-auto container mt-5 row">
       <div class="task-add-box my-3 col-12 col-lg-4 order-lg-3">
         <div class="card">
           <div class="card-header"><h5>Add New Task</h5></div>
@@ -47,8 +47,8 @@
             <h5 class="float-left">To Do List</h5>
             <a
               href=""
-              id="delAll"
               class="float-right btn btn-outline-danger rounded"
+              id="delAll"
             >
               Delete All
             </a>
@@ -112,6 +112,12 @@
         </div>
       </div>
     </div>
+
+    <footer class="bg-dark text-light text-center p-3">
+      <a href="https://www.github.com/okanuregen" class="text-light"
+        >by Okan Uregen</a
+      >
+    </footer>
 
     <script src="script2.js"></script>
     <script
