Meta Tags Added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="to do list, online to do list, to do list app"
+    />
+    <meta
+      name="description"
+      content="Responsive, online To Do List App that can save the tasks into local storage.
+    Whenever you enter from a device, your information won't be lost unless clear local storage by clearing the history or doing something else."
+    />
+    <meta name="author" content="Okan Uregen" />
     <title>To Do List</title>
     <script
       src="https://kit.fontawesome.com/9c206210e0.js"
@@ -17,7 +27,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container mx-auto p-5 row">
+    <div class="mx-auto container mt-5 row">
       <div class="task-add-box my-3 col-12 col-lg-4 order-lg-3">
         <div class="card">
           <div class="card-header"><h5>Add New Task</h5></div>
@@ -47,8 +57,8 @@
             <h5 class="float-left">To Do List</h5>
             <a
               href=""
-              id="delAll"
               class="float-right btn btn-outline-danger rounded"
+              id="delAll"
             >
               Delete All
             </a>
@@ -112,6 +122,12 @@
         </div>
       </div>
     </div>
+
+    <footer class="bg-dark text-light text-center p-3">
+      <a href="https://www.github.com/okanuregen" class="text-light"
+        >by Okan Uregen</a
+      >
+    </footer>
 
     <script src="script2.js"></script>
     <script
